--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,9 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                               |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------- |
-| Tuesday, September 20  | 6:00 PM UTC | [Savannah Norem][norem]                                                                                | savannah_streams_in_snake_case - Stream a Little Stream - Episode 4|
-| Wednesday, September 21  | 6:00 PM UTC | [Steve Lorello][steve]                                                                               | Coding with Steve - Steve Streams on Streams                       |
-| Thursday, September 22  | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 2      |
 | Thursday, September 22  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
 | Friday, September 23    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                     |
 | Thursday, September 29  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
@@ -51,53 +48,55 @@ Sometimes we're on the road speaking at in-person events or enjoying a well dese
 
 Past events:
 
-|         Date          |    Time     | Streamers                                                                                             | Show                                                                     |
-| :-------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
-| Friday, September 16  | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][29]                                               |
-| Thursday, September 15| 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                        |
-| Friday, September 9   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][28]                                               |
-| Thursday, September 8 | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                        |
-| Thursday, September 8 | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 1][27]      |
-| Wednesday, September 7| 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 7][26]                       |
-| Tuesday, September 6  | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 3][25] |
-| Friday, September 2   | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Redis MUD - Episode 3][24]                |
-| Friday, September 2   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]                            | [This Week On Discord][23]                                               |
-| Thursday, September 1 | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Hardware Bloom Filter][22]                |
-| Wednesday, August 31  | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 6][21]                       |
-| Tuesday, August 30    | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 2][20] |
-| Friday, August 26     | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Redis MUD - Episode 2][19]                |
-| Wednesday, August 24  | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 5][18]                       |
-| Tuesday, August 23    | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 1][17] |
-| Thursday, August 18   | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][16]                                        |
-| Tuesday, August 16    | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][15]                                     |
-| Friday, August 12     | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Random Projects with Guy][14]             |
-| Wednesday, August 10  | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve][13]                                                  |
-| Tuesday, August 9     | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][12]                                     |
-| Friday, August 5      | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [IoT with Redis: Introduction][11]                                       |
-| Wednesday, August 3   | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Steve Works on Redis OM .NET][10]                                       |
-| Tuesday, August 2     | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][9]                                      |
-| Friday, July 29       | 4:00 PM UTC | [Savannah Norem][norem], [Simon Prickett][simon]                                                      | [First Steps to Open Source Contribution][8]                             |
-| Thursday, July 28     | 3:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with RU203: Querying, Indexing and Full-Text Search       |
-| Wednesday, July 27    | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Steve Works on cli.redis.io][7]                                         |
-| Tuesday, July 26      | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case - Probabilistic Data Structures][6]      |
-| Wednesday, July 20    | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Steve Works on cli.redis.io][4]                                         |
-| Friday, July 15       | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Exploring Bun and Node Redis][3]                                        |
-| Thursday, July 14     | 3:00 PM UTC | [Simon Prickett][simon]                                                                               | [Introduction to Redis Streams with RedisInsight, Node and Python][5]    |
-| Wednesday, July 13    | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | Steve Works on Redis OM .NET                                             |
-| Friday, July 8        | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | Graph, Graph, and Graph                                                  |
-| Thursday, July 7      | 2:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with the RU202 Redis Streams Course                       |
-| Wednesday, July 6     | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | Steve Works on Redis OM .NET                                             |
-| Thursday, June 30     | 6:00 PM UTC | [Savannah Norem][norem], [Guy Royse][guy]                                                             | Comparing Sets, Bloom Filters, and Cuckoo Filters                        |
-| Wednesday, June 29    | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | Steve Works on Redis OM .NET!                                            |
-| Tuesday, June 28      | 3:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with the RU102J Redis University Course                   |
-| Friday, June 24       | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | Graph, Graph, and Graph                                                  |
-| Thursday, June 23     | 6:00 PM UTC | [Justin Castilla][justin], [Savannah Norem][norem]                                                    | [Redis OM: Python + JSON + Search][2]                                    |
-| Thursday, June 16     | 3:00 PM UTC | [Simon Prickett][simon], [Justin Castilla][justin]                                                    | [Counting Things At Scale with Redis][1]                                 |
-| Wednesday, June 15    | 5:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with the RU102JS Redis University Course                  |
-| Wednesday, June 15    | 4:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with the RU102PY Redis University Course                  |
-| Friday, June 10       | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | Working on Redis OM for Node.js                                          |
-| Friday, June 10       | 3:00 PM UTC | [Justin Castilla][justin], [Suze Shardlow][suze]                                                      | Working with Redis Data Structures                                       |
-| Friday, June 3        | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | Tracking Aircraft with Redis + Software-Defined Radio                    |
+|         Date          |    Time      | Streamers                                                                                             | Show                                                                     |
+| :-------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Thursday, September 22 | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 2][31]      |
+| Tuesday, September 20  | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case - Stream a Little Stream - Episode 4][30]|
+| Friday, September 16   | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][29]                                               |
+| Thursday, September 15 | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                        |
+| Friday, September 9    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][28]                                               |
+| Thursday, September 8  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                        |
+| Thursday, September 8  | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 1][27]      |
+| Wednesday, September 7 | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 7][26]                       |
+| Tuesday, September 6   | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 3][25] |
+| Friday, September 2    | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Redis MUD - Episode 3][24]                |
+| Friday, September 2    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]                            | [This Week On Discord][23]                                               |
+| Thursday, September 1  | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Hardware Bloom Filter][22]                |
+| Wednesday, August 31   | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 6][21]                       |
+| Tuesday, August 30     | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 2][20] |
+| Friday, August 26      | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Redis MUD - Episode 2][19]                |
+| Wednesday, August 24   | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 5][18]                       |
+| Tuesday, August 23     | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 1][17] |
+| Thursday, August 18    | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][16]                                        |
+| Tuesday, August 16     | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][15]                                     |
+| Friday, August 12      | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Random Projects with Guy][14]             |
+| Wednesday, August 10   | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve][13]                                                  |
+| Tuesday, August 9      | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][12]                                     |
+| Friday, August 5       | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [IoT with Redis: Introduction][11]                                       |
+| Wednesday, August 3    | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Steve Works on Redis OM .NET][10]                                       |
+| Tuesday, August 2      | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][9]                                      |
+| Friday, July 29        | 4:00 PM UTC | [Savannah Norem][norem], [Simon Prickett][simon]                                                      | [First Steps to Open Source Contribution][8]                             |
+| Thursday, July 28      | 3:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with RU203: Querying, Indexing and Full-Text Search       |
+| Wednesday, July 27     | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Steve Works on cli.redis.io][7]                                         |
+| Tuesday, July 26       | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case - Probabilistic Data Structures][6]      |
+| Wednesday, July 20     | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Steve Works on cli.redis.io][4]                                         |
+| Friday, July 15        | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Exploring Bun and Node Redis][3]                                        |
+| Thursday, July 14      | 3:00 PM UTC | [Simon Prickett][simon]                                                                               | [Introduction to Redis Streams with RedisInsight, Node and Python][5]    |
+| Wednesday, July 13     | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | Steve Works on Redis OM .NET                                             |
+| Friday, July 8         | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | Graph, Graph, and Graph                                                  |
+| Thursday, July 7       | 2:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with the RU202 Redis Streams Course                       |
+| Wednesday, July 6      | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | Steve Works on Redis OM .NET                                             |
+| Thursday, June 30      | 6:00 PM UTC | [Savannah Norem][norem], [Guy Royse][guy]                                                             | Comparing Sets, Bloom Filters, and Cuckoo Filters                        |
+| Wednesday, June 29     | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | Steve Works on Redis OM .NET!                                            |
+| Tuesday, June 28       | 3:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with the RU102J Redis University Course                   |
+| Friday, June 24        | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | Graph, Graph, and Graph                                                  |
+| Thursday, June 23      | 6:00 PM UTC | [Justin Castilla][justin], [Savannah Norem][norem]                                                    | [Redis OM: Python + JSON + Search][2]                                    |
+| Thursday, June 16      | 3:00 PM UTC | [Simon Prickett][simon], [Justin Castilla][justin]                                                    | [Counting Things At Scale with Redis][1]                                 |
+| Wednesday, June 15     | 5:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with the RU102JS Redis University Course                  |
+| Wednesday, June 15     | 4:00 PM UTC | [Simon Prickett][simon]                                                                               | Up and Running with the RU102PY Redis University Course                  |
+| Friday, June 10        | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | Working on Redis OM for Node.js                                          |
+| Friday, June 10        | 3:00 PM UTC | [Justin Castilla][justin], [Suze Shardlow][suze]                                                      | Working with Redis Data Structures                                       |
+| Friday, June 3         | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | Tracking Aircraft with Redis + Software-Defined Radio                    |
 
   </TabItem>
 </Tabs>
@@ -118,6 +117,8 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[31]: https://www.youtube.com/watch?v=TQlsvxD6zRM
+[30]: https://www.youtube.com/watch?v=dwkrP4iO8tM
 [29]: https://www.youtube.com/watch?v=fpgJuAnsVzA
 [28]: https://www.youtube.com/watch?v=F4mAMJWT1vg
 [27]: https://www.youtube.com/watch?v=8Q3jK5CAfNQ
