SEO meta keywords

--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -4,6 +4,7 @@ title: Python with Redis
 sidebar_label: Overview
 slug: /develop/python/
 authors: [ajeet]
+keywords: [python redis, redis python, pip install redis]
 ---
 
 import Tabs from '@theme/Tabs';
