Amends the 29th September stream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -26,7 +26,7 @@ Check out our upcoming events:
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------- |
 | Thursday, September 22  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
 | Friday, September 23    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                     |
-| Thursday, September 29  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
+| Thursday, September 29  | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
 | Friday, September 30    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                     |
 
   </TabItem>
