--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -27,12 +27,12 @@ Check out our upcoming events:
 | Thursday, September 22  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
 | Friday, September 23    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                     |
 | Thursday, September 29  | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
-| Friday, September 30    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                     |
+| Friday, September 30    | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                     |
 
   </TabItem>
   <TabItem value="recurring">
 
-Sometimes we're on the road speaking at in-person events or enjoying a well deserved vacation. But when we're not, here's our weekly streaming schedule:
+Sometimes we're on the road speaking at in-person events or enjoying a well-deserved vacation. But when we're not, here's our weekly streaming schedule:
 
 |    Day    |    Time     | Streamers                                                                                             | Show                                                             |
 | :-------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------- |
