--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -50,6 +50,7 @@ Past events:
 
 |         Date          |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Thursday, September 22  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, September 22 | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 2][31]      |
 | Tuesday, September 20  | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case - Stream a Little Stream - Episode 4][30]|
 | Friday, September 16   | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][29]                                               |
