--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,8 +24,8 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Thursday, September 29  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
-| Friday, September 30    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
+| Thursday, September 29  | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
+| Friday, September 30    | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
 | Thursday, October 6     | 9:30 AM UTC | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 3][twitch] | 
 | Thursday, October 6     | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 7       | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
