--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -8,7 +8,7 @@ custom_edit_url: null
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-The Redis Developer Relations Team hosts a variety of live content on [Twitch][twitch], [YouTube][yt] and [Discord]. Follow us to get notified when we go live. And, you know, like and subscribe.
+The Redis Developer Relations Team hosts a variety of live content on [Twitch][twitch], [YouTube][yt] and [Discord][discord]. Follow us to get notified when we go live. And, you know, like and subscribe.
 
 <Tabs
    defaultValue="upcoming"
@@ -24,11 +24,10 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Thursday, September 29  | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
-| Friday, September 30    | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
-| Thursday, October 6     | 9:30 AM UTC | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 3][twitch] | 
+| Thursday, October 6     | 9:30 AM UTC | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 3][twitch] |
 | Thursday, October 6     | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 7       | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
+| Friday, October 7       | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Building Redis MUD - Web, Whimsy, and Redis Stack: Episode 5][twitch]  |
 | Thursday, October 13    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 14      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
 | Thursday, October 20    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
@@ -57,6 +56,9 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Friday, September 30   | 5:00 PM UTC  | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]                                           |
+| Thursday, September 29 | 3:00 PM UTC  | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                        |
+| Friday, September 23   | 6:00 PM UTC  | [Guy Royse][guy]                                                                                      | [Building Redis MUD - Web, Whimsy, and Redis Stack: Episode 4][33]         |
 | Friday, September 23   | 5:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][32]                                               |
 | Thursday, September 22 | 3:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, September 22 | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 2][31]      |
@@ -68,17 +70,17 @@ Past events:
 | Thursday, September 8  | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 1][27]      |
 | Wednesday, September 7 | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 7][26]                       |
 | Tuesday, September 6   | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 3][25] |
-| Friday, September 2    | 6:00 PM UTC  | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Redis MUD - Episode 3][24]                |
+| Friday, September 2    | 6:00 PM UTC  | [Guy Royse][guy]                                                                                      | [Building RedisMUD - Web, Whimsy, and Redis Stack: Episode 3][24]        |
 | Friday, September 2    | 5:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]                            | [This Week On Discord][23]                                               |
 | Thursday, September 1  | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Hardware Bloom Filter][22]                |
 | Wednesday, August 31   | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 6][21]                       |
 | Tuesday, August 30     | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 2][20] |
-| Friday, August 26      | 6:00 PM UTC  | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Redis MUD - Episode 2][19]                |
+| Friday, August 26      | 6:00 PM UTC  | [Guy Royse][guy]                                                                                      | [Building Redis MUD - Web, Whimsy, and Redis Stack: Episode 2][19]       |
 | Wednesday, August 24   | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 5][18]                       |
 | Tuesday, August 23     | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 1][17] |
 | Thursday, August 18    | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][16]                                        |
 | Tuesday, August 16     | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][15]                                     |
-| Friday, August 12      | 6:00 PM UTC  | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Random Projects with Guy][14]             |
+| Friday, August 12      | 6:00 PM UTC  | [Guy Royse][guy]                                                                                      | [Building RedisMUD - Web, Whimsy, and Redis Stack: Episode 1][14]        |
 | Wednesday, August 10   | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve][13]                                                  |
 | Tuesday, August 9      | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][12]                                     |
 | Friday, August 5       | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [IoT with Redis: Introduction][11]                                       |
@@ -126,6 +128,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[33]: https://www.youtube.com/watch?v=7dGT921Db-s
 [32]: https://www.youtube.com/watch?v=c1h53k1U17A
 [31]: https://www.youtube.com/watch?v=TQlsvxD6zRM
 [30]: https://www.youtube.com/watch?v=dwkrP4iO8tM
