--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,9 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Thursday, September 29  | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
-| Friday, September 30    | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
-| Thursday, October 6     | 9:30 AM UTC | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 3][twitch] | 
 | Thursday, October 6     | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 7       | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
 | Thursday, October 13    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
@@ -57,6 +54,10 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Thursday, October 6    | 9:30 AM UTC  | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 3][35]      | 
+| Tuesday, October 4     | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case - Stream a Little Stream - Episode 5][34]|
+| Friday, September 30   | 5:00 PM UTC  | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][33]                                               |
+| Thursday, September 29 | 3:00 PM UTC  | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                        |
 | Friday, September 23   | 5:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][32]                                               |
 | Thursday, September 22 | 3:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, September 22 | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 2][31]      |
@@ -126,6 +127,9 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[35]: https://www.youtube.com/watch?v=0vw_vhouca8
+[34]: https://www.youtube.com/watch?v=Q43AmJAv6Q8
+[33]: https://www.youtube.com/watch?v=VK54dyImqaM
 [32]: https://www.youtube.com/watch?v=c1h53k1U17A
 [31]: https://www.youtube.com/watch?v=TQlsvxD6zRM
 [30]: https://www.youtube.com/watch?v=dwkrP4iO8tM
