Adds Simon's Oct 20th stream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -26,8 +26,9 @@ Check out our upcoming events:
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
 | Thursday, October 6     | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 7       | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
-| Thursday, October 13    | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
+| Thursday, October 13    | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 14      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
+| Thursday, October 20    | 9:30 AM UTC | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 4][twitch] |
 | Thursday, October 20    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 21      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
 | Thursday, October 27    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
