Moved This Week on Discord Oct 14 to top, filled in past tab with recent events.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,8 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Friday, October 7       | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Building Redis MUD - Web, Whimsy, and Redis Stack: Episode 5][twitch]  |
-| Thursday, October 13    | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 14      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
 | Thursday, October 20    | 9:30 AM UTC | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 4][twitch] |
 | Thursday, October 20    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
@@ -54,6 +52,9 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Thursday, October 13   | 3:00 PM UTC  | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                        |
+| Wednesday, October 12  | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 8][39]                       |
+| Friday, October 7      | 6:00 PM UTC  | [Guy Royse][guy]                                                                                      | [Building Redis MUD - Web, Whimsy, and Redis Stack: Episode 5][38]       |
 | Friday, October 7      | 5:00 PM UTC  | [Justin Castilla][justin], [Suze Shardlow][suze] and [Simon Prickett][simon]                          | [This Week on Discord][37]                                               |
 | Thursday, October 6    | 3:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, October 6    | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 3][35]      | 
@@ -130,6 +131,8 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[39]: https://www.youtube.com/watch?v=NI0CjxDXwhA
+[38]: https://www.youtube.com/watch?v=mNeUB8PrJ8k
 [37]: https://www.youtube.com/watch?v=Tdhv1sbUwrk
 [36]: https://www.youtube.com/watch?v=7dGT921Db-s
 [35]: https://www.youtube.com/watch?v=0vw_vhouca8
