--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,8 +24,7 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Friday, October 14      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
-| Tuesday, October 18   | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]     
+| Tuesday, October 18     | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                                |
 | Thursday, October 20    | 9:30 AM UTC | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 4][twitch] |
 | Thursday, October 20    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 21      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
@@ -53,6 +52,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Friday, October 14     | 5:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][40]                                               |
 | Thursday, October 13   | 3:00 PM UTC  | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                        |
 | Wednesday, October 12  | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 8][39]                       |
 | Friday, October 7      | 6:00 PM UTC  | [Guy Royse][guy]                                                                                      | [Building Redis MUD - Web, Whimsy, and Redis Stack: Episode 5][38]       |
@@ -132,6 +132,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[40]: https://www.youtube.com/watch?v=-UpX2H6xTIQ
 [39]: https://www.youtube.com/watch?v=NI0CjxDXwhA
 [38]: https://www.youtube.com/watch?v=mNeUB8PrJ8k
 [37]: https://www.youtube.com/watch?v=Tdhv1sbUwrk
