Move schedule around to reflect state of play Oct 20 2022.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,8 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Tuesday, October 18     | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                                |
-| Thursday, October 20    | 9:30 AM UTC | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 4][twitch] |
 | Thursday, October 20    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 21      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
 | Thursday, October 27    | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 5][twitch] |
@@ -53,6 +51,9 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Thursday, October 20   | 9:30 AM UTC  | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 4][43]      |
+| Wednesday, October 12  | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 9][42]                       |
+| Tuesday, October 18    | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][41]                                     |
 | Friday, October 14     | 5:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][40]                                               |
 | Thursday, October 13   | 3:00 PM UTC  | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                        |
 | Wednesday, October 12  | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 8][39]                       |
@@ -133,6 +134,9 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[43]: https://www.youtube.com/watch?v=MuaJzyUHmx0
+[42]: https://www.youtube.com/watch?v=GMpBlGhSucw
+[41]: https://www.youtube.com/watch?v=SOhIRenJB5g
 [40]: https://www.youtube.com/watch?v=-UpX2H6xTIQ
 [39]: https://www.youtube.com/watch?v=NI0CjxDXwhA
 [38]: https://www.youtube.com/watch?v=mNeUB8PrJ8k
