Updated office hours participants.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -50,7 +50,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
-| Thursday, October 20   | 3:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                        |
+| Thursday, October 20   | 3:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, October 20   | 9:30 AM UTC  | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 4][43]      |
 | Wednesday, October 19  | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 9][42]                       |
 | Tuesday, October 18    | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][41]                                     |
